<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepositFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_amountToDepositTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/amount_to_deposit_title"
            android:textColor="@color/colorPrimaryVariant"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_depositAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/amount_to_deposit_view"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_amountToDepositTitle" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/name_of_currency"
            app:layout_constraintEnd_toStartOf="@+id/textView_depositAmount"
            app:layout_constraintTop_toTopOf="@+id/textView_depositAmount" />

        <View
            android:id="@+id/divider12"
            style="@style/Divider"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_depositAmount" />

        <TextView
            android:id="@+id/textView_deposit_5k"
            style="@style/FixedDeposit"
            android:text="@string/fixed_deposit_amount_1"
            app:layout_constraintTop_toBottomOf="@+id/divider12"
            app:layout_constraintEnd_toStartOf="@+id/textView_deposit_10k"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textView_deposit_10k"
            style="@style/FixedDeposit"
            android:text="@string/fixed_deposit_amount_2"
            app:layout_constraintStart_toEndOf="@+id/textView_deposit_5k"
            app:layout_constraintEnd_toStartOf="@+id/textView_deposit_20k"
            app:layout_constraintTop_toBottomOf="@+id/divider12"/>

        <TextView
            android:id="@+id/textView_deposit_20k"
            style="@style/FixedDeposit"
            android:text="@string/fixed_deposit_amount_3"
            app:layout_constraintTop_toBottomOf="@+id/divider12"
            app:layout_constraintStart_toEndOf="@+id/textView_deposit_10k"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/divider13"
            style="@style/Divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_deposit_10k" />

        <TextView
            android:id="@+id/textView_deposit_25k"
            style="@style/FixedDeposit"
            android:text="@string/fixed_deposit_amount_4"
            app:layout_constraintTop_toBottomOf="@+id/divider13"
            app:layout_constraintEnd_toStartOf="@+id/textView_deposit_50k"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/textView_deposit_50k"
            style="@style/FixedDeposit"
            android:text="@string/fixed_deposit_amount_5"
            app:layout_constraintStart_toEndOf="@+id/textView_deposit_25k"
            app:layout_constraintEnd_toStartOf="@+id/textView_deposit_100k"
            android:onClick="doNothing"
            app:layout_constraintTop_toBottomOf="@+id/divider13"/>

        <TextView
            android:id="@+id/textView_deposit_100k"
            style="@style/FixedDeposit"
            android:text="@string/fixed_deposit_amount_6"
            app:layout_constraintTop_toBottomOf="@+id/divider13"
            app:layout_constraintStart_toEndOf="@+id/textView_deposit_50k"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:id="@+id/divider14"
            style="@style/Divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_deposit_50k" />

        <TextView
            android:id="@+id/textView_customAmount"
            style="@style/FixedDeposit"
            android:layout_width="match_parent"
            android:text="@string/custom_amount_text_view"
            app:layout_constraintTop_toBottomOf="@+id/divider14" />

        <View
            android:id="@+id/divider15"
            style="@style/Divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_customAmount" />

        <View
            android:id="@+id/view_background_of_deposit_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#FCFCFD"
            app:layout_constraintTop_toBottomOf="@+id/divider15"
            tools:layout_editor_absoluteX="-2dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@color/colorPrimaryVariant"
            app:strokeWidth="2dp"
            android:text="+ Deposit 3,000"
            android:textStyle="bold"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintTop_toTopOf="@+id/view_background_of_deposit_button"
            android:backgroundTint="@android:color/transparent"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/view_background_of_deposit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:letterSpacing="0.1"
            android:text="Deposit Transaction"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_background_of_deposit_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_deposit_transactions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            tools:listitem="@layout/item_deposit_transaction" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
