<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="myViewModel"
            type="com.example.financemanager.ui.expense.AddExpenseViewModel" />
    </data>

        <ScrollView
            android:id="@+id/scrollView"
            tools:context=".ui.expense.AddExpenseFragment"
            android:background="@color/bckGround"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bckGround"
                android:padding="24dp"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Category"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorSecondary" />


                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:entries="@{myViewModel.spinnerTexts}"
                    android:selectedItemPosition="@={myViewModel.spinnerItemPos}"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.FinanceManager.TextInputLayout"
                    android:hint="@string/hint_expense_name"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:text="@={myViewModel.expenseName}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.FinanceManager.TextInputLayout"
                    android:hint="@string/hint_expense_amount"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@={myViewModel.expenseAmount}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.FinanceManager.TextInputLayout"
                    android:hint="@string/hint_expense_description"
                    android:layout_marginTop="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:maxLines="5"
                        android:text="@={myViewModel.expenseDescription}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_add_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorSecondary"
                    android:textColor="@android:color/white"
                    android:onClick="@{() -> myViewModel.insertExpenditure()}"
                    android:text="@string/button_add_expense"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"/>

            </LinearLayout>
        </ScrollView>
</layout>
